--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,16 @@
 <app-header></app-header>
 <div class="container my-4">
-<div class="row">
+<div class="row gy-4" *ngIf="!notesLoading">
     <div class="col-12 col-md-6 col-lg-4" *ngFor="let note of notes">
-        <div class="p-3 border rounded-3">
+        <div class="p-3 border rounded-3 bg-light">
             <h4>{{note.title}}</h4>
             <p class="text-dark">{{note.content}}</p>
         </div>
     </div>
+</div>
+<div class="d-flex align-items-center justify-content-center" *ngIf="notesLoading" style="height: calc(100vh - 56px);">
+<div class="spinner-border text-info" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
 </div>
 </div>
