--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-info-subtle">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Notepad</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" aria-current="page" href="#" routerLink="editor">New</a>
+                    <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="/editor">New</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Save</a>
